--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 <body>
@@ -24,14 +25,34 @@
     </ul>
   </nav>
   <div class="btns">
-    <a href="#" class="bg-orange-600 text-white py-2 px-4 rounded-md hover:bg-orange-800" ><i class="bx bxs-user"></i></a>
+    <a href="#" class="bg-orange-600 text-white py-2 px-4 rounded-md hover:bg-orange-800" >
+      <!-- <i class="bx bxs-user"></i> -->
+      <i class="fa-solid fa-cart-plus"></i>
+    </a>
   </div>
  </header>
-<section class="min-h-screen w-full
+  
+ <!-- home -->
+  <section class="relative min-h-screen w-full
+  bg-[url('/images/bg-home.jpg')] bg-no-repeat bg-center bg-cover
+  ">
 
- bg-[url('/images/bg-home.jpg')] bg-no-repeat bg-center bg-cover
 
-"></section>
+
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  <p class="relative z-10 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sapiente fugit exercitationem aliquid molestiae totam et eveniet mollitia nostrum, quis iste, itaque molestias quam sit ut commodi rem omnis asperiores! Iusto id consequuntur magni debitis at ipsum earum modi eveniet. Distinctio nihil provident quasi nesciunt ea. Dignissimos expedita cum aliquam laboriosam aliquid possimus deserunt error enim, amet itaque facilis voluptates, deleniti perferendis obcaecati quis? Itaque maiores earum ad laudantium ipsam fuga eum dolorem, molestias excepturi facere sequi. Tenetur ea suscipit dolor tempore voluptatum quibusdam natus accusantium, ipsam quo nostrum eligendi aspernatur, eveniet sint eum voluptates ullam. Sapiente deleniti iusto veniam, ab illum pariatur odio nesciunt. Aut nisi porro amet tempore eaque perspiciatis laboriosam mollitia minus iure. Esse atque praesentium, sint maiores, blanditiis quas quod aliquam id rerum pariatur ipsum! Dolorum iusto fuga obcaecati illum magnam, a tempora cupiditate debitis consequatur esse recusandae maxime neque nulla, non quibusdam repellendus nam ipsam aliquid. Deleniti assumenda aspernatur ad ex quibusdam ullam, libero, nobis aliquid porro ut molestias totam consequatur veniam expedita eum laboriosam nisi incidunt, perferendis inventore optio! Praesentium culpa cum dignissimos tenetur sequi ut? Et non eaque autem nostrum saepe quas dolorem natus modi. Aut quod expedita dolorem autem ratione ipsa libero incidunt eveniet amet, facere reiciendis dignissimos non odio unde cum dicta nisi animi numquam officiis, optio assumenda necessitatibus. Ducimus numquam ad corrupti labore deleniti pariatur fuga repudiandae animi fugit non aliquid mollitia tenetur, amet reiciendis inventore iste. Quasi odio amet ab explicabo animi recusandae, doloremque repellendus ipsa tempore possimus voluptate, fugiat quis corporis, reiciendis esse. Dolores alias, autem illum animi pariatur fugit. Reprehenderit rerum optio facere repellat nemo, ullam excepturi tempora, laborum eos fugiat suscipit placeat neque consequuntur veniam perferendis voluptates non fuga? In inventore accusamus numquam deserunt, quibusdam corporis, ipsam incidunt veniam culpa eum magnam laborum est! Iusto labore debitis neque, corporis quaerat illo laboriosam provident porro quas cumque totam modi rerum. Inventore omnis facere commodi harum quae ullam quos, iure quod quaerat similique nulla accusamus qui, sapiente deleniti id praesentium maxime, sit voluptatum blanditiis. Quisquam quae obcaecati ipsam iste nesciunt necessitatibus impedit unde repellendus ducimus, quam commodi provident vitae id distinctio voluptatum dignissimos maiores optio minus fugit omnis temporibus voluptate dolores? Nemo, sequi hic nam voluptate similique, expedita cupiditate debitis id sit repudiandae ex voluptatum quis incidunt molestiae aliquid libero labore corporis nulla! Ab magnam rem cum inventore explicabo repudiandae possimus optio placeat totam. Provident molestiae tempora esse perspiciatis dolorum libero reprehenderit ab laborum eos voluptatum, cumque fuga delectus voluptate sit vel iusto quasi a ullam quos, exercitationem dicta reiciendis laudantium. Cumque quisquam delectus obcaecati ad, eos nobis molestiae est cupiditate quidem id sint, cum quas repellat voluptatum distinctio nisi amet odio harum, provident rerum doloremque. Accusamus totam ad aliquam laboriosam quod quae necessitatibus dolorum quia, officia nesciunt, inventore soluta porro rerum quaerat. Dicta alias quis voluptatibus? Fugiat molestiae, blanditiis eum ea quae doloremque veniam ducimus non voluptatibus nulla autem qui! Ducimus voluptate quod debitis. Ipsa eaque corrupti officiis, beatae quas est commodi! Nobis nulla reprehenderit autem possimus laudantium modi explicabo dolorem asperiores laboriosam corporis sequi numquam aliquid itaque ipsum dolore aliquam, temporibus sunt minus similique animi fugit sed distinctio error? Blanditiis possimus repudiandae, ullam, nesciunt voluptates eos natus perferendis, vitae tenetur voluptatibus corrupti neque. Tempore ut incidunt fugit eligendi optio maiores delectus, quod a odio culpa enim dolore id ex provident magni blanditiis asperiores facere. Distinctio perspiciatis corrupti ut maiores officiis quae doloremque voluptatem, veniam ab dolorem minus accusantium delectus possimus sequi, ratione, veritatis consequatur! Totam laboriosam fugit amet perspiciatis aliquam fuga alias. Enim neque sunt dolore illum incidunt perspiciatis nostrum, suscipit, nulla itaque tempora voluptas! Illum itaque hic neque unde ratione velit quis minus autem reprehenderit eaque quam, officia minima ad dignissimos doloremque, quae optio! Aperiam consectetur recusandae saepe et perferendis voluptates nobis obcaecati facilis odit similique, laborum, inventore ullam nesciunt. Temporibus provident velit eos sit dignissimos illum odio alias architecto adipisci nihil at vero, commodi aspernatur placeat? Adipisci atque nesciunt repudiandae officiis dicta voluptate reiciendis voluptatem soluta dolorum tempore sed explicabo provident beatae assumenda, blanditiis tenetur, quasi ipsa voluptas eveniet. Minus sequi labore neque reprehenderit unde quidem, deserunt placeat optio quas nesciunt, blanditiis at. Libero eligendi harum maxime aliquam, nobis sequi corrupti rerum fuga incidunt quasi saepe magnam quis rem! Eius recusandae, optio tenetur suscipit excepturi, magni cupiditate itaque dolorum veritatis quis officiis quibusdam omnis corrupti asperiores, vitae fugit soluta aliquid est! Possimus laborum eveniet enim ipsa qui iure vel, nam asperiores temporibus voluptate repellendus quidem minima quaerat corporis facere explicabo necessitatibus omnis repudiandae nemo expedita. Beatae saepe soluta voluptatibus. Voluptatibus minus a ad laborum non consectetur sed nobis ipsa. Eaque ducimus, error quibusdam impedit totam modi tempora temporibus? Repellat esse ipsum corporis ut. Aliquid quaerat voluptatibus fuga perspiciatis blanditiis eveniet rem officiis quae quia. Facilis officia minus est velit numquam animi, magnam amet praesentium.</p>
 </body>
