--- a/src/index.html
+++ b/src/index.html
@@ -116,5 +116,244 @@
         </div>
       </section>
 
+      
+        <!-- ################## -->
+    <!-- Services -->
+    <!-- ################## -->
+    
+    <section class="services" id="services">
+      <div class="section-heading">
+        <span>Nos prestations</span>
+        <h2>Découvrez les meilleures offres !</h2>
+      </div>
+      <div class="services-container">
+
+        <div class="box">
+          <div class="box-img">
+            <img src="./images/car-01.jpg" alt="">
+          </div>
+          <p>2018</p>
+          <h4>BMW</h4>
+          <h5>150 € <span>/mois</span></h5>
+          <a href="#" class="btn">Louer maintenant</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./images/car-02.jpg" alt="">
+          </div>
+          <p>2018</p>
+          <h4>Honda</h4>
+          <h5>150 € <span>/mois</span></h5>
+          <a href="#" class="btn">Louer maintenant</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./images/car-03.jpg" alt="">
+          </div>
+          <p>2018</p>
+          <h4>Yamaha</h4>
+          <h5>150 € <span>/mois</span></h5>
+          <a href="#" class="btn">Louer maintenant</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./images/car-04.jpg" alt="">
+          </div>
+          <p>2018</p>
+          <h4>Toyota</h4>
+          <h5>150 € <span>/mois</span></h5>
+          <a href="#" class="btn">Louer maintenant</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./images/car-05.jpg" alt="">
+          </div>
+          <p>2018</p>
+          <h4>Toyota</h4>
+          <h5>150 € <span>/mois</span></h5>
+          <a href="#" class="btn">Louer maintenant</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./images/car-06.jpg" alt="">
+          </div>
+          <p>2018</p>
+          <h4>BMW</h4>
+          <h5>150 € <span>/mois</span></h5>
+          <a href="#" class="btn">Louer maintenant</a>
+        </div>
+
+      </div>
+    </section>
+
+        <!-- ################## -->
+    <!-- À propos -->
+    <!-- ################## -->
+
+
+    <section class="about" id="about">
+      <div class="section-heading">
+        <span>Qui somme nous ?</span>
+        <h2>Notre Histoire !</h2>
+      </div>
+      <div class="about-container">
+        <div class="about-img">
+          <img src="./images/about.png" alt="">
+        </div>
+        <div class="about-content">
+          <span>À propos de nous</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur voluptates veniam eum ea minus corrupti eligendi, velit in. Aspernatur, voluptatem.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, non. Consequatur, fugit quia. Ipsum fuga non illo culpa, mollitia porro harum aspernatur consectetur alias aliquam quos eos doloremque voluptatibus tenetur?</p>
+          <a href="#" class="btn">En savoir plus</a>
+        </div>
+
+      </div>
+
+    </section>
+
+        <!-- ################## -->
+    <!-- Reviews -->
+    <!-- ################## -->
+
+    <section class="reviews" id="reviews">
+      <div class="section-heading">
+        <span>Votre avis compte !</span>
+        <h2>Ils nous ont fait confiance</h2>
+      </div>
+
+      <div class="reviews-container">
+
+        <div class="box-rev">
+          <div class="rev-img">
+            <img src="./images/review-01.jpg" alt="">
+          </div>
+          <div class="stars">
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+          </div>
+          <h5>Thomas Does</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum modi placeat cupiditate iste eius libero!</p>
+        </div>
+
+        <div class="box-rev">
+          <div class="rev-img">
+            <img src="./images/review-02.jpg" alt="">
+          </div>
+          <div class="stars">
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+          </div>
+          <h5>Luis Chui</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum modi placeat cupiditate iste eius libero!</p>
+        </div>
+
+        <div class="box-rev">
+          <div class="rev-img">
+            <img src="./images/review-01.jpg" alt="">
+          </div>
+          <div class="stars">
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+            <i class='bx bxs-star' ></i>
+          </div>
+          <h5>Pierre Corentin</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum modi placeat cupiditate iste eius libero!</p>
+        </div>
+
+
+      </div>
+    </section>
+
+      <!-- ################## -->
+    <!-- Newsletter  -->
+    <!-- ################## -->
+
+    <section class="newsletter">
+      <h2>Inscrivez-vous à la newsletter</h2>
+      <div class="news-box">
+        <input type="email" placeholder="Indiquez votre e-mail">
+        <a href="#" class="btn">S'inscrire</a>
+      </div>
+    </section>
+
+
+            <!-- ################## -->
+    <!-- foooter -->
+    <!-- ################## -->
+
+    <footer>
+
+      <div class="footer-box">
+        <img src="./images/logo.png" alt="">
+          <div class="social">
+              <i class='bx bxl-facebook' ></i>
+              <i class='bx bxl-instagram' ></i>
+              <i class='bx bxl-twitter' ></i>
+              <i class='bx bxl-youtube' ></i>
+          </div>
+      </div>
+
+ 
+      <div class="footer-box">
+          <h2>Informations</h2>
+          <li>
+              <a href="#">Conditions de vente</a>
+          </li>
+          <li>
+              <a href="#">Mentions légales</a>
+          </li>
+          <li>
+              <a href="#">Support</a>
+          </li>
+          <li>
+              <a href="#">Nous contacter</a>
+          </li>
+      </div>
+
+      <div class="footer-box">
+          <h2>Nos locaux</h2>
+          <li>
+              <a href="#">France</a>
+          </li>
+          <li>
+              <a href="#">Algerie</a>
+          </li>
+          <li>
+              <a href="#">Espagne</a>
+          </li>
+          <li>
+              <a href="#">Italie</a>
+          </li>
+          <li>
+              <a href="#">Canada</a>
+          </li>
+      </div>
+
+      <div class="footer-box">
+          <h3>Paiements</h3>
+          <div class="payement">
+              <img src="./images/pay-01.png" alt="">
+              <img src="./images/pay-02.png" alt="">
+              <img src="./images/pay-03.png" alt="">
+              <img src="./images/pay-04.png" alt="">
+          </div>
+      </div>
+
+  </footer>
+
+  <div class="copy">
+    <p>&copy; 2023 - evarost - Tous droits réservés</p>
+
+  </div>
+
+
 </body>
 </html>
